2022-09-15T00:35:40Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3057002074
* notice: last 14d: unq all: 1 4
* notice: prev accum: outdated-unq outdated-all / unq all: 57 69 / 62 74
* notice: next accum: outdated-unq outdated-all / unq all: 62 75 / 66 79
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-31] / []

2022-09-14T08:07:44Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3051155094
* notice: last 14d: unq all: 2 5
* notice: prev accum: outdated-unq outdated-all / unq all: 57 69 / 65 78
* notice: next accum: outdated-unq outdated-all / unq all: 57 69 / 62 74
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -4 -5 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-08-31 2022-09-14]

2022-09-14T00:32:19Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3049333495
* notice: last 14d: unq all: 5 9
* notice: prev accum: outdated-unq outdated-all / unq all: 51 62 / 65 78
* notice: next accum: outdated-unq outdated-all / unq all: 57 69 / 65 78
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-30] / []

2022-09-13T08:09:35Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3043387171
* notice: last 14d: unq all: 9 16
* notice: prev accum: outdated-unq outdated-all / unq all: 51 62 / 64 77
* notice: next accum: outdated-unq outdated-all / unq all: 51 62 / 65 78
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-13]

2022-09-13T00:33:01Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3041538652
* notice: last 14d: unq all: 9 15