@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-15T00:35:40Z",
+  "timestamp" : "2022-09-15T08:02:44Z",
   "count_outdated" : 75,
   "uniques_outdated" : 62,
-  "count" : 79,
-  "uniques" : 66,
+  "count" : 80,
+  "uniques" : 67,
   "clones" : [
     {
       "timestamp": "2022-09-04T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-09-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
